# TetrisProjekt

./: .gitignore  CMakeLists.txt  README.md  build.sh  leaderboard.txt  main  main.c
interactions/: events.c  events.h
scenes/game/: game.c  game.h
scenes/game_over/: game_over.c  game_over.h
scenes/leaderboard/: leaderboard.c  leaderboard.h
scenes/mainmenu/: mainmenu.c  mainmenu.h
utility/: textrenderer.c  textrenderer.h
utility/gamemanager/: gamemanager.c  gamemanager.h
utility/textrenderer/: textrenderer.c  textrenderer.h
